AS-3: Added required account service methods along with exception handling, swagger, logback and other related classes