@@ -30,13 +30,7 @@ public class BranchService {
 
     private final AccountMapper accountMapper;
 
-    /***
-     *
-     * @param branchDto
-     * @return
-     * @throws Exception
-     */
-    public BranchDto createBranch(BranchDto branchDto) throws Exception {
+    public BranchDto createBranch(BranchDto branchDto){
 
         log.atInfo().log("creating a new branch");
 
@@ -45,13 +39,7 @@ public class BranchService {
     }
 
 
-    /***
-     *
-     * @param branchCode
-     * @return
-     * @throws Exception
-     */
-    public BranchDto getBranchByBranchCode(Long branchCode) throws Exception {
+    public BranchDto getBranchByBranchCode(Long branchCode) {
 
         log.atInfo().log("getting branch by branch code: {}", branchCode);
 
@@ -65,13 +53,7 @@ public class BranchService {
         return branchMapper.toDto(branch.get(), new CycleAvoidingMappingContext());
     }
 
-    /***
-     *
-     * @param branchCode
-     * @return
-     * @throws Exception
-     */
-    public List<AccountDto> getAllAccountsForABranch(Long branchCode) throws Exception {
+    public List<AccountDto> getAllAccountsForABranch(Long branchCode){
 
         log.atInfo().log("getting all accounts for a branch with branch code: {}", branchCode);
 
@@ -82,34 +64,22 @@ public class BranchService {
                         .stream()
                         .map(accountEntity -> accountMapper.toDto(accountEntity, new CycleAvoidingMappingContext()))
                         .toList())
-                .orElseThrow(() -> new EntityNotFoundException("Branch with the given Id not found: " + branchCode));
+                .orElseThrow(() -> new EntityNotFoundException("Branch with the given Id not found:{} " + branchCode));
     }
 
-
-    /***
-     *
-     * @return
-     * @throws Exception
-     */
-    public List<BranchDto> getAllBranches() throws Exception {
+    public List<BranchDto> getAllBranches(){
 
         log.atInfo().log("getting all branches");
 
         List<BranchEntity> activeBranches = branchRepository.findAllByIsActiveTrue();
 
         return activeBranches.stream()
-                .map(branch -> branchMapper.toDto(branch, new CycleAvoidingMappingContext()))
-                .collect(Collectors.toList());
+                .map(branch ->
+                        branchMapper.toDto(branch, new CycleAvoidingMappingContext()))
+                .toList();
     }
 
-    /**
-     *
-     * @param branchCode
-     * @param branchDto
-     * @return
-     * @throws Exception
-     */
-    public BranchDto updateBranch(Long branchCode, BranchDto branchDto) throws Exception {
+    public BranchDto updateBranch(Long branchCode, BranchDto branchDto){
 
         log.atInfo().log("updating branch with branch code: {}", branchCode);
 
@@ -121,23 +91,18 @@ public class BranchService {
         return branchMapper.toDto(branchEntity, new CycleAvoidingMappingContext());
     }
 
-    /***
-     *
-     * @param branchCode
-     * @throws Exception
-     */
-    public void deleteBranch(Long branchCode) throws Exception {
+    public void deleteBranch(Long branchCode){
 
         log.atInfo().log("deleting branch with branch code: {}", branchCode);
 
         branchRepository.findBranchByBranchCode(branchCode)
                 .map(branchEntity -> {
                     if (!branchEntity.getIsActive()) {
-                        throw new EntityAlreadyDeletedException("Branch with the given Id is not found: " + branchCode);
+                        throw new EntityAlreadyDeletedException("Branch with the given Id is not found:{} " + branchCode);
                     }
                     branchEntity.setIsActive(false);
                     return branchRepository.save(branchEntity);
                 })
-                .orElseThrow(() -> new EntityNotFoundException("Branch with the given Id not found: " + branchCode));
+                .orElseThrow(() -> new EntityNotFoundException("Branch with the given Id not found:{} " + branchCode));
     }
 }
